# soplex

./: .env.example  .gitignore  LICENSE  README.md  SOPLEX_EXPLAINED.md  benchmark_analysis.txt  benchmark_flowchart.html  benchmark_test_results.txt  pyproject.toml
benchmark_demo/: DEMO_GUIDE.md  DEMO_RECORDING_INSTRUCTIONS.md  README.md  SOPLEX_ARCHITECTURE_DEEP_DIVE.md  VIDEO_RECORDING_GUIDE.md  fix_and_run.py  launch_demo_ui.py  restart_demo.py  run_comparison.py  run_complete_demo.py  run_demo.sh  run_simple_demo.py  test_complete_flow.py
benchmark_demo/cli_showcase/: run_cli_demo.py
benchmark_demo/results/: flow.html
benchmark_demo/soplex_approach/: run_soplex.py
benchmark_demo/sops/: customer_escalation_flow.sop  enterprise_kyc.sop  financial_fraud_detection.sop  regulatory_compliance.sop
benchmark_demo/tools/: test_scenarios.yaml
benchmark_demo/traditional_approach/: run_traditional.py
benchmark_demo/web_ui/: app.py  fixed_graph_visualizer.py  graph_visualizer.py  requirements.txt
benchmark_demo/web_ui/static/css/: enhanced-style.css  style.css
benchmark_demo/web_ui/static/js/: demo.js
benchmark_demo/web_ui/templates/: index.html
benchmarks/: refund_analysis.txt
demo_fintech_support/: README.md  demo.py  fintech_support.sop
demo_linkedin/: LINKEDIN_POST_AND_VIDEO_SCRIPT.md  generate_graphs.py  generate_notebook.py  uk_kyc.sop
examples/: fraud_check.sop  password_reset.sop  refund.sop  tools.yaml  uk_kyc_aml_pipeline.py
src/soplex/: __init__.py  cli.py  config.py
src/soplex/compiler/: __init__.py  code_generator.py  graph.py  graph_builder.py  python_api.py
src/soplex/llm/: __init__.py  provider.py
src/soplex/parser/: __init__.py  models.py  sop_parser.py  step_classifier.py
src/soplex/runtime/: __init__.py  executor.py  state.py  tool_registry.py
src/soplex/utils/: __init__.py  cost_tracker.py
src/soplex/visualizer/: __init__.py  mermaid.py
tests/: __init__.py  conftest.py  test_classifier.py  test_compiler.py  test_e2e.py  test_executor.py  test_graph.py  test_llm_provider.py  test_parser.py  test_python_api.py
